# cici

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yaml
audio-sample-generation/: README.md  generate_defective_audio.py  pyproject.toml
docs/: android-users-manual.md  modes.md  sample-conversations.md
ears/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ears/ears/: __init__.py  config.py  main.py  metrics.py  normalize.py  schemas.py  utils.py
ears/ears/audio/: __init__.py  audio_analyzer.py  faster_whisper_client.py  vad_processor.py
ears/ears/config/: config.yaml  word_aliases.json
ears/tests/: __init__.py  conftest.py  test_audio_analyzer.py  test_e2e_audio_recording.py  test_gpu.py  test_transcription.py  test_vad.py  test_websocket.py
face/: .dockerignore  Dockerfile  README.md  app.py  audio-testing.md  config.py  metrics.py  mind_client.py  mouth_client.py  pyproject.toml
face-android/: .gitlab-ci.yml  release-keystore.jks  settings.gradle
face-android/app/: build.gradle
face-android/app/src/main/: AndroidManifest.xml
face-android/app/src/main/java/com/homelab/cici/: MainActivity.java  MessageAdapter.java  SettingsActivity.java  SettingsManager.java
face-android/app/src/main/java/com/homelab/cici/api/: EarsClient.java  MindClient.java  MouthClient.java
face-android/app/src/main/java/com/homelab/cici/audio/: AudioPlayer.java  AudioRecorder.java
face-android/app/src/main/java/com/homelab/cici/auto/: CiciCarAppService.java  CiciCarScreen.java  CiciCarSession.java
face-android/app/src/main/java/com/homelab/cici/model/: Message.java
face-android/app/src/main/res/drawable/: ic_launcher.xml  input_background.xml
face-android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_message.xml
face-android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
face-android/app/src/main/res/values/: strings.xml  themes.xml
face/.bak/: audio.py  audio_streamer copy.py  audio_streamer.py  text.py
face/.streamlit/: config.toml
face/config/: config.yaml
face/pages/: chat.py  testing.py
face/static/: pcm-processor.js
face/tests/: test_audio_apptest.py  test_audio_chat.py  test_audioworklet_firefox.py
face/tests/audio/: .gitignore  transcriptions.json
face/utils/: __init__.py  audio_recorder.py  audio_streamer.py
lips/: README.md  app.py  mind_client.py  pyproject.toml
mind/: .dockerignore  Dockerfile  README.md  pyproject.toml
mind/config/: commands.yaml  config.yaml  system-prompts.yaml  translations.yaml
mind/docs/: modes.md
mind/mind/: __init__.py  command_router.py  config.py  input_processor.py  main.py  message_buffer.py  metrics.py  schemas.py  session.py  transcript_buffer.py
mind/mind/controllers/: __init__.py  claude.py  claude_code.py  cli.py  ollama.py
mind/mind/core/: __init__.py  commands.py  prompts.py  sentence_detector.py  session_logger.py  tmux_session.py  translation.py  tts.py  tts_client.py
mind/tests/: __init__.py  conftest.py  test_buffers.py  test_command_router.py  test_controllers.py  test_input_processor.py  test_session.py  test_tts.py
mouth/: .dockerignore  CLAUDE.md  Dockerfile  README.md  implementation-plan.md  pyproject.toml
mouth/app/: __init__.py  config.py  main.py  metrics.py  models.py  queue_manager.py  synthesizer.py
mouth/config/: config.yaml
mouth/mouth/: config.py  main.py  queue_manager.py  synthesizer.py
tests/: conftest.py  test_e2e_all_services.py  test_face_ears_integration.py  test_face_mind_integration.py
tests/audio/: .gitignore
tests/audio/defective/: defects.json
tests/e2e/: conftest.py  helpers.py  test_edge_cases.py  test_mode_switch.py  test_smoke.py  test_text_claude_code.py  test_text_cli.py  test_text_ollama.py  test_tts.py  test_voice.py
tests/gpu/: conftest.py  test_combined_vram.py  test_ears_gpu.py  test_gpu_availability.py  test_mouth_gpu.py  test_ollama_gpu.py  test_pod_gpu_usage.py
