[project]
name = "ears"
version = "0.1.0"
description = "WebSocket transcription service - audio in, text out"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "silero-vad>=6.2.0",
    "torch>=2.0.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ears"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
